Fix cart delete alignment

--- a/assets/component-cart-items.css
+++ b/assets/component-cart-items.css
@@ -104,7 +104,7 @@
 }
 
 .cart-item cart-remove-button {
-  display: inline-block;
+  display: flex;
   margin-left: 1rem;
 }
 
